added more styles and content form client-facing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
   box-sizing: border-box;
+  border: thin solid silver;
 }
 
 html{
@@ -106,6 +107,7 @@ header{
   border-bottom: 6px solid #9a4a24;
 }
 
+
 header img {
 width: 100%;
 /* margin: 0 auto; */
@@ -168,7 +170,23 @@ main#salesData{
   color: #69563f ;
 }
 
-table td,
-table th{
-  padding: 5px 10px;
+
+/* table styles */
+
+#dataTable {
+  background-color: #fff;
+  border-radius: 5px;
+  border: 2px solid black;
+}
+
+#dataTable thead {
+  font-weight: 700;
+  background-color: #703012;
+  color: #fff;
+  border-bottom: 5px solid #000;
+}
+
+#dataTable thead th{
+  padding: 10px 10px;
+  
 }
