--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,6 @@ nav ul li{
   padding: 5px 10px;
   border-radius: 5px;
   font-weight: 700;
-  margin: 0 5px;
 }
 
 nav ul li a{
@@ -145,6 +144,7 @@ nav ul li a{
   text-decoration: none;
   letter-spacing: 2px;
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 nav ul li a:hover{
@@ -176,17 +176,53 @@ main#salesData{
 #dataTable {
   background-color: #fff;
   border-radius: 5px;
-  border: 2px solid black;
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  text-align: right;
 }
 
 #dataTable thead {
   font-weight: 700;
   background-color: #703012;
   color: #fff;
-  border-bottom: 5px solid #000;
+  border-bottom: 3px solid #000;
 }
 
-#dataTable thead th{
-  padding: 10px 10px;
-  
+#dataTable tr,
+#dataTable td,
+#dataTable th{
+  padding: 10px;
 }
+
+#dataTable th, #dataTable td{
+  border-bottom: 1px solid #ddd;
+}
+
+#dataTable thead,
+#dataTable tr td:first-child,
+#dataTable tr td:last-child,
+#dataTable tfoot{
+  font-weight: 700;
+
+}
+
+#dataTable tfoot{
+  border-top: 2px solid #703012;
+}
+
+#dataTable tr td{
+  text-align: right;
+}
+
+#dataTable tr td:first-child{
+  text-align: left;
+}
+
+#dataTable tr  td:first-child:hover ~  td,
+#dataTable td:hover{
+  cursor: default;
+  background-color: #dcdcdc;
+}
+
+
