--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,6 @@ body {
     background-color: #fff9f0;
 }
 
-section{
-  
-}
-
 h1, h2, h3, h4, h5, h6{
   font-family: 'Montserrat', sans-serif;
   margin-top: 0;
@@ -103,6 +99,68 @@ sub{
   vertical-align: sub;
   font-size: smaller;
   line-height: normal;
+}
+
+/* form */
+form {
+  margin: 0 auto;
+  width: 400px;
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
+
+form label span {
+  display: inline-block;
+  width: 120px;
+  text-align: right;
+}
+
+form input, form textarea {
+  font: 1em sans-serif;
+  width: 250px;
+  box-sizing: border-box;
+  border: 1px solid #999;
+}
+
+form input[type=checkbox], form input[type=radio] {
+  width: auto;
+  border: none;
+}
+
+form input:focus,form textarea:focus {
+  border-color: #000;
+}
+
+form textarea {
+  vertical-align: top;
+  height: 5em;
+  resize: vertical;
+}
+
+fieldset {
+  width: 250px;
+  box-sizing: border-box;
+  margin-right: 136px;
+  border: 1px solid #999;
+}
+
+form button {
+  margin: 20px 0 0 124px;
+}
+
+form label {
+position: relative;
+}
+
+legend{
+  display: block;
+  padding-inline-start: 2px;
+  padding-inline-end: 2px;
+}
+
+fieldset+fieldset{
+  margin: 5px;
 }
 
 /* header */
